update build script and readme